--- a/HTML e CSS - Responsividade/Atividade 1/styles/style.css
+++ b/HTML e CSS - Responsividade/Atividade 1/styles/style.css
@@ -126,10 +126,10 @@ body{
   .apresentacao
    {
     flex-direction: column-reverse;
-    padding: 2%;
+    padding: 5%;
    }
 
    .apresentacao__conteudo{
-    
+    width: auto;
    }
 }
